simple glimmer redux app in action

--- a/src/ui/components/glimmer-redux-example/template.hbs
+++ b/src/ui/components/glimmer-redux-example/template.hbs
@@ -1,1 +1,5 @@
-<div><h1>Welcome to Glimmer!</h1></div>
+<div>
+  <h1>Welcome to Glimmer Redux!</h1>
+  <p>{{up}}</p>
+  <button onclick={{action update}}>add</button>
+</div>
