TESTS: updated the integration test

--- a/src/ui/components/with-component/template.hbs
+++ b/src/ui/components/with-component/template.hbs
@@ -1,4 +1,4 @@
 <div>
-  <h3>{{text}}</h3>
-  <button class="update" onclick={{action update}}>update</button>
+  <h3 class="glimmer-text">{{text}}</h3>
+  <button class="glimmer-update" onclick={{action update}}>update</button>
 </div>
