--- a/src/ui/components/without-component/template.hbs
+++ b/src/ui/components/without-component/template.hbs
@@ -1,4 +1,4 @@
 <div>
-  <h3>number {{up}}</h3>
+  <h3 class="number">number {{up}}</h3>
   <button class="update" onclick={{action update}}>update</button>
 </div>
